<resources>
    <string name="app_name">ProEduk</string>
    <string name="elementos">Seleccione el nivel</string>
    <string name="select">Select Item</string>
    <string name="user_name">Username</string>
    <string name="menu_close">ProEduk</string>
    <string name="menu_open">ProEduk</string>
    <string name="olvido"><u>¿Olvidó su contraseña? </u></string>
    <string name="proeduk_teaching_services">ProEduk Teaching Services</string>
    <string name="password">Password</string>
    <string name="login">LOGIN NOW</string>
    <string name="create_an_account">Create An Account</string>
    <string name="enter_user_name">Enter e-mail</string>
    <string name="enter_password">Enter password</string>
    <string name="reg_strate">Regístrate</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="e_mail">E-mail</string>
    <string name="introduzca_una_contrase_a">Introduzca una contraseña</string>
    <string name="confirme_su_contrase_a">Confirme su contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="ya_posee_una_cuenta_accese_aqu">¿Ya posee una cuenta? Accese aquí</string>
    <string name="professor_judith">Professor Judith</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notas">Notas</string>
    <string name="nombre_de_la_clase">Seleccionar Materia</string>
    <string name="introduzca_el_grupo">Seleccionar Grado</string>
    <string name="a_ade_una_clase">Añade una clase.</string>
    <string name="add_class">Add Class</string>
    <string name="add_a_class">Add A Class</string>
    <string name="title_activity_directing1">Directing1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="anadir">Añadir</string>
    <string name="cancelar">Cancelar</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_plans">Welcome to Plans</string>
    <string name="utilice_la_barra_de_b_squeda_para_buscar_planes_y_materiales">Utilice la barra de búsqueda para buscar planes y materiales.</string>
    <string name="username">Username</string>

    //Headings
    <string name="heading_one">Planifica Tus Lecciones</string>
    <string name="heading_two">Conéctate En Tu Computadora</string>
    <string name="heading_three">Amplia Biblioteca</string>
    <string name="heading_fourth">Maximiza Tu Tiempo</string>
    <string name="heading_fifth">¡Bienvenidos, maestros!</string>

    //Description
    <string name="desc_one">Un excelente servicio de organización y planificación semanal para el maestro. </string>
    <string name="desc_two">¿Prefieres utilizar los servicios de ProEduk en computadora? Utiliza los servicios integrados en diferentes dispositivos. </string>
    <string name="desc_three">Busca el plan o recurso que necesites utilizando una biblioteca amplia; integra fotos, documentos, quiz y exámenes.</string>
    <string name="desc_fourth">¡Ejerce control de tu tiempo! ProEduk Teaching Services provee la capacidad para reducir el tiempo que toma planificar hasta un 75%</string>
    <string name="desc_fifth" />
    <string name="title_activity_reg_gmail">Reg_Gmail</string>
    <string name="title_activity_profile">Profile</string>

    //ArrayList for Dropdown Age

    <string-array name="user_age">

        <item>21</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60+</item>




    </string-array>

    <string-array name="user_pueblo">

        <item>Adjuntas</item>
        <item>Aguada</item>
        <item>Aguadilla</item>
        <item>Aguas Buenas</item>
        <item>Aibonito</item>
        <item>Arecibo</item>
        <item>Arroyo</item>
        <item>Añasco</item>
        <item>Barceloneta</item>
        <item>Barranquitas</item>
        <item>Bayamón</item>
        <item>Cabo Rojo</item>
        <item>Caguas</item>
        <item>Camuy</item>
        <item>Canóvanas</item>
        <item>Carolina</item>
        <item>Cataño</item>
        <item>Cayey</item>
        <item>Ceiba</item>
        <item>Ciales</item>
        <item>Cidra</item>
        <item>Coamo</item>
        <item>Comerío</item>
        <item>Corozal</item>
        <item>Culebra</item>
        <item>Dorado</item>
        <item>Fajardo</item>
        <item>Florida</item>
        <item>Guayama</item>
        <item>Guayanilla</item>
        <item>Guaynabo</item>
        <item>Gurabo</item>
        <item>Guánica</item>
        <item>Hatillo</item>
        <item>Hormigueros</item>
        <item>Humacao</item>
        <item>Isabela</item>
        <item>Jayuya</item>
        <item>Juana Díaz</item>
        <item>Juncos</item>
        <item>Lajas</item>
        <item>Lares</item>
        <item>Las Marías</item>
        <item>Las Piedras</item>
        <item>Loiza</item>
        <item>Luquillo</item>
        <item>Manatí</item>
        <item>Maricao</item>
        <item>Maunabo</item>
        <item>Mayagüez</item>
        <item>Moca</item>
        <item>Morovis</item>
        <item>Naguabo</item>
        <item>Naranjito</item>
        <item>Orocovis</item>
        <item>Patillas</item>
        <item>Peñuelas</item>
        <item>Ponce</item>
        <item>Quebradillas</item>
        <item>Rincón</item>
        <item>Rio Grande</item>
        <item>Sabana Grande</item>
        <item>Salinas</item>
        <item>San Germán</item>
        <item>San Juan</item>
        <item>San Lorenzo</item>
        <item>San Sebastián</item>
        <item>Santa Isabel</item>
        <item>Toa Alta</item>
        <item>Toa Baja</item>
        <item>Trujillo Alto</item>
        <item>Utuado</item>
        <item>Vega Alta</item>
        <item>Vieques</item>
        <item>Villalba</item>
        <item>Yabucoa</item>
        <item>Yauco</item>



    </string-array>

    //GoogleServerClientIDForLogin

    <string name="web_client_id">733447301089-ejgndj16tauhrh2ae0pe72g80nsj9mkr.apps.googleusercontent.com</string>
    <string name="qu_edad_tiene">¿Qué edad tiene?</string>
    <string name="skip">SKIP</string>
    <string name="selec_opc">Seleccione una opción</string>
    <string name="search">Search...</string>
    <string name="nivel_academico">Nivel Academico</string>
    <string name="edad">Edad</string>
    <string name="provea_su_edad">Provea su edad</string>
    <string name="pueblo">Pueblo</string>
    <string name="provea_el_pueblo">Provea el pueblo</string>
    <string name="c_mo_nos_encontr">¿Cómo nos encontró?</string>
    <string name="provea_una_opcion">Provea una opcion</string>
    <string name="a_os_de_docencia">Años de docencia</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="a_adir_nueva_clase">Añadir Nueva Clase</string>
    <string name="bienvenidos">¡Bienvenidos!</string>
    <string name="registrarse">Registrarse</string>
    <string name="provea_su_nombre">Provea su nombre</string>
    <string name="provea_sus_apellidos">Provea sus apellidos</string>
    <string name="provea_su_correo_electr_nico">Provea su correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="escriba_su_contrase_a">Escriba su contraseña</string>
    <string name="confirme_contrase_a">Confirme Contraseña</string>
    <string name="ingresar_pueblo">Ingresar Pueblo</string>
    <string name="nivel_academico_que_ense_a">Nivel Academico que enseña</string>
    <string name="seleccione_nivel_es">Seleccione Nivel(es)</string>
    <string name="registrar_datos">Registrar Datos</string>

</resources>