<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/coloridus"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginTop="-30dp"
        android:background="@drawable/roundedbanner">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/bienvenidos"
            android:textAllCaps="true"
            android:textColor="#ffff"
            android:textSize="26sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="20dp"

            app:cardCornerRadius="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins"
                        android:text="@string/registrarse"
                        android:textColor="#00a5ff"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre"
                        android:textColor="#00a5ff"
                        android:textSize="20sp" />


                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/provea_su_nombre" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apellidos"
                        android:textColor="#00a5ff"
                        android:textSize="20sp" />
                    <EditText
                        android:id="@+id/lastnames"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/provea_sus_apellidos" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/e_mail"
                        android:textColor="#00a5ff"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/getEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/provea_su_correo_electr_nico" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contrase_a"
                        android:textColor="#00a5ff"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/getPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/escriba_su_contrase_a"
                        android:inputType="textPassword" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirme_contrase_a"
                        android:textColor="#00a5ff"
                        android:textSize="20sp"
                        />

                    <EditText
                        android:id="@+id/getPassc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/escriba_su_contrase_a"
                        android:inputType="textPassword" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view"
                            android:layout_width="0dp"
                            android:layout_height="60dp"
                            android:layout_weight="1"
                            android:background="@android:drawable/editbox_background"
                            android:drawableEnd="@drawable/ic_downarrows"
                            android:gravity="center_vertical"
                            android:hint="@string/ingresar_pueblo"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            tools:ignore="UseCompatTextViewDrawableXml" />

                        <TextView
                            android:id="@+id/text_view4"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"

                            android:background="@android:drawable/editbox_background"
                            android:drawableEnd="@drawable/ic_downarrows"
                            android:gravity="center_vertical"
                            android:text="@string/c_mo_nos_encontr"


                            tools:ignore="UseCompatTextViewDrawableXml" />






                    </LinearLayout>

                    <View

                        android:layout_width="match_parent"
                        android:layout_height="1dp"


                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"

                        android:background="#D9D9D9" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/text_view2"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"

                            android:background="@android:drawable/editbox_background"
                            android:drawableEnd="@drawable/ic_downarrows"
                            android:gravity="center_vertical"
                            android:hint="@string/provea_su_edad"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            tools:ignore="UseCompatTextViewDrawableXml" />

                        <TextView
                            android:id="@+id/text_view3"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_marginStart="20dp"
                            android:background="@android:drawable/editbox_background"
                            android:drawableEnd="@drawable/ic_downarrows"
                            android:gravity="center_vertical"
                            android:hint="@string/a_os_de_docencia"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            tools:ignore="UseCompatTextViewDrawableXml" />


                    </LinearLayout>

                    <View

                        android:layout_width="match_parent"
                        android:layout_height="1dp"


                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"

                        android:background="#D9D9D9" />




                    <TextView
                        android:id="@+id/pruebita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nivel_academico_que_ense_a"
                        android:textColor="#00a5ff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/muestrame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_input"
                        android:hint="@string/seleccione_nivel_es"
                        android:padding="12dp"
                        android:scrollbarAlwaysDrawVerticalTrack="false"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        />


                    <Button
                        android:id="@+id/btnregist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/changeag_btn"
                        android:hint="@string/registrar_datos" />





                </LinearLayout>



            </ScrollView>



        </androidx.cardview.widget.CardView>


    </LinearLayout>


</FrameLayout>
