<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pencilsbik"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    app:defaultNavHost="true"
    >

    <ImageView

        android:layout_width="234dp"
        android:layout_height="185dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="65dp"
        android:contentDescription="@string/proeduk_teaching_services"
        android:src="@drawable/logotreal"
        app:shapeAppearanceOverlay="@style/circular"
        app:strokeColor="@color/white"
        app:strokeWidth="0dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:text="@string/e_mail"
        android:textColor="#ffffff"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/LoginEmails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="30dp"
        android:autofillHints="UserName"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_user_icon"
        android:drawableLeft="@drawable/custom_user_icon"
        android:drawablePadding="12dp"
        android:hint="@string/enter_user_name"
        android:inputType="text"
        android:paddingVertical="15dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="#A9A9A9" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-25dp"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:text="@string/password"
        android:textColor="#ffffff"
        android:textSize="25sp"
        tools:text="Password" />

    <EditText
        android:id="@+id/LoginPasswords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawableLeft="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:autofillHints="password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingVertical="15dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="#A9A9A9" />
    <TextView
        android:id="@+id/resetLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/olvido"
        android:inputType="textUri"
        android:textColor="#0000EE"
        android:clickable="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/changeag_btn"
        android:fontFamily="serif"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="20sp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Or"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/registosan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_change"
        android:text="⌨ Registrarse"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="bold"

        />

    <LinearLayout
        android:id="@+id/googleSignIn"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/googlebutton"
        android:layout_gravity="center_horizontal">


        <ImageView

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/googlelogo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up with Google"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            />





    </LinearLayout>



</LinearLayout>


