<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/classdialog"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/bluewhiteborder"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/circlekeeper"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:src="@drawable/circlebook" />


    <TextView

        android:id="@+id/classtup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/circlekeeper"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_campos"
        android:hint="@string/nombre_de_la_clase"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:textColor="@color/black"
        android:textColorHint="#727372"
        android:textSize="24sp" />

    <TextView

        android:id="@+id/Sectiones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/classtup"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_campos"
        android:hint="@string/introduzca_el_grupo"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:textColor="@color/black"
        android:textColorHint="#727372"
        android:textSize="24sp" />


    <Button

        android:id="@+id/addud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Sectiones"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:background="@drawable/selectedgreen"
        android:text="@string/anadir"


        />


</RelativeLayout>